# Matilda3

./: .gitignore  README.md
docs/: Roadmap.md
scripts/: build.sh  deploy.sh
systemd/: matilda-behavior-manager.service  matilda-robot.service
ws/src/: placeholder.txt
ws/src/matilda_motor/: package.xml  setup.cfg  setup.py
ws/src/matilda_motor/matilda_motor/: motor_node.py
ws/src/movement_behaviors/: package.xml  setup.cfg  setup.py
ws/src/movement_behaviors/launch/: joystick_teleop.launch.py
ws/src/movement_behaviors/movement_behaviors/: behavior_manager_node.py  box_drive_node.py  forward_back_node.py
